# maayanlab-bioinformatics

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  maayanlab_bioinformatics.api.html  maayanlab_bioinformatics.clustering.html  maayanlab_bioinformatics.dge.html  maayanlab_bioinformatics.enrichment.html  maayanlab_bioinformatics.harmonization.html  maayanlab_bioinformatics.html  maayanlab_bioinformatics.normalization.html  maayanlab_bioinformatics.parse.html  maayanlab_bioinformatics.plotting.html  maayanlab_bioinformatics.setup.html  maayanlab_bioinformatics.utils.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  maayanlab_bioinformatics.api.doctree  maayanlab_bioinformatics.clustering.doctree  maayanlab_bioinformatics.dge.doctree  maayanlab_bioinformatics.doctree  maayanlab_bioinformatics.enrichment.doctree  maayanlab_bioinformatics.harmonization.doctree  maayanlab_bioinformatics.normalization.doctree  maayanlab_bioinformatics.parse.doctree  maayanlab_bioinformatics.plotting.doctree  maayanlab_bioinformatics.setup.doctree  maayanlab_bioinformatics.utils.doctree  modules.doctree
.github/workflows/: deploy-doc-to-ghpages.yml
_modules/: index.html
_modules/maayanlab_bioinformatics/api/: enrichr.html  speedrichr.html
_modules/maayanlab_bioinformatics/dge/: deseq2.html  (+4 more)
_sources/: index.rst.txt  maayanlab_bioinformatics.api.rst.txt  maayanlab_bioinformatics.clustering.rst.txt  maayanlab_bioinformatics.dge.rst.txt  maayanlab_bioinformatics.enrichment.rst.txt  maayanlab_bioinformatics.harmonization.rst.txt  maayanlab_bioinformatics.normalization.rst.txt  maayanlab_bioinformatics.parse.rst.txt  maayanlab_bioinformatics.plotting.rst.txt  maayanlab_bioinformatics.rst.txt  maayanlab_bioinformatics.setup.rst.txt  maayanlab_bioinformatics.utils.rst.txt
docs/: Makefile  requirements.txt
docs/source/: .gitignore  conf.py  modules.rst
examples/: biojupies.py
maayanlab_bioinformatics/: __init__.py
maayanlab_bioinformatics/api/: __init__.py  enrichr.py  speedrichr.py
maayanlab_bioinformatics/clustering/: __init__.py  silhouette_analysis.py
maayanlab_bioinformatics/dge/: __init__.py  characteristic_direction.py  deseq2.py  limma_voom.py  logfc.py  ttest.py
maayanlab_bioinformatics/diffexp/: characteristic_direction.py
maayanlab_bioinformatics/enrichment/: __init__.py  crisp.py  gsea2003.py  gsea2005.py
maayanlab_bioinformatics/harmonization/: __init__.py  homologs.py  id_mapper.py  ncbi_genes.py  transcripts.py
maayanlab_bioinformatics/normalization/: __init__.py  cpm.py  filter.py  log.py  quantile.py  quantile_legacy.py  test_quantile.h5  varFilter.py  zscore.py
maayanlab_bioinformatics/parse/: __init__.py  gmt.py  suerat.py
maayanlab_bioinformatics/plotting/: __init__.py  bridge.py  clustergrammer.py  upset.py
maayanlab_bioinformatics/setup/: R.py
maayanlab_bioinformatics/utils/: __init__.py  chunked.py  describe.py  fetch_save_read.py  maybe_tqdm.py  merge.py  sparse.py
tests/: test_enrichr_results.txt  test_example_matrix_dge_results.txt  test_geneset.txt  test_gmt.gmt
tests/dge/: test_deseq2.py  test_limma.py  test_logfc.py  test_ttest.py
tests/enrichment/: test_crisp.py
tests/normalization/: test_cpm.py  test_quantile.py  test_quantile_legacy.py
tests/parse/: test_gmt.py
(+24 files in other folders)
