[project]
name = "maayanlab-bioinformatics"
version = "0.9.3"
description = "A collection of useful functions for bioinformatics data analysis."
authors = [
    {name = "Daniel J. B. Clarke",email = "danieljbclarkemssm@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "qnorm",
    "requests",
    "scikit-learn",
    "scipy"
]

[project.optional-dependencies]
h5py = ["h5py"]
limma_voom = ["rpy2 (>=3.6.4,<4.0.0)"]
progress = ["tqdm"]
enrichr_user_list = ["bs4", "lxml"]
deseq2 = ["pydeseq2"]
all = ["h5py", "rpy2 (>=3.6.4,<4.0.0)", "tqdm", "bs4", "lxml", "pydeseq2"]
docs = ["recommonmark","sphinx","m2r2"]
dev = [
    "pytest (<9) ; python_version < '3.10'",
    "pytest (>=9.0.2,<10.0.0) ; python_version >= '3.10'"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
